#261321 - patch provided by ipwa to prevent flickering when hovering over images.

--- a/css/lightbox-rtl.css
+++ b/css/lightbox-rtl.css
@@ -185,7 +185,7 @@
 /* Image location mod */
 #bottomNavClose {
   display: block;
-  background: url(../images/close.gif) right no-repeat;
+  background: url(../images/close.gif) left no-repeat;
   position: relative;
   top: 35px;
   left: 0px;
@@ -196,7 +196,7 @@
 }
 
 #bottomNavClose:hover {
-  background: url(../images/close_hover.gif) right no-repeat;
+  background-position: right;
 }
 
 #loadingLink {
